fix: Slash Command mapping